feat(deployments): initial wip for managing deployments with k8s
