# ververica-platform-api/model_deployment_restore_strategy.go
@@ -11,4 +11,5 @@ package ververicaplatformapi
 
 type DeploymentRestoreStrategy struct {
 	Kind string `json:"kind,omitempty"`
+	AllowNonRestoredState bool `json:"allowNonRestoredState,omitempty"`
 }
